2007-01-21 Yang Hong <yanghong@ccoss.com.cn>

	Reviewed by Naba Kumar  <naba@gnome.org>:
	* plugins/document-manager/anjuta-docman.c,
	plugins/message-view/anjuta-msgman.c
	Set right alignment to the label widget in the tab title.

2007-01-21  Naba Kumar  <naba@gnome.org>
	
	* libegg/egg-combo-action.c: Fixed mode line.
	* manuals/reference/libanjuta/tmpl/libanjuta-unused.sgml,
	manuals/reference/libanjuta/tmpl/plugins.sgml: Updated.

2007-01-21  Armin Burgmeier  <armin@arbur.net>

	Reviewed by Naba Kumar  <naba@gnome.org>:
	* plugins/class-gen/plugin.c: Prompt for target before actually
	generating the class files. This ensures that the files are created in
	the correct directory. Fixes bug #397406.

	* plugins/class-gen/window.c: Set browse buttons to insensitive when
	the class is added to the project.

2007-01-21  Naba Kumar  <naba@gnome.org>

	* libanjuta/anjuta-plugin-description.c,
	libanjuta/anjuta-ui.h,
	libanjuta/anjuta-status.c,
	libanjuta/anjuta-plugin-description.h,
	libanjuta/cell-renderer-captioned-image.c,
	libanjuta/anjuta-plugin-handle.c,
	libanjuta/anjuta-status.h,
	libanjuta/resources.c,
	libanjuta/cell-renderer-captioned-image.h,
	libanjuta/glue-cpp.c,
	libanjuta/anjuta-plugin-handle.h,
	libanjuta/anjuta-plugin.c,
	libanjuta/anjuta-preferences-dialog.c,
	libanjuta/libanjuta.h,
	libanjuta/resources.h,
	libanjuta/glue-cpp.h,
	libanjuta/anjuta-plugin.h,
	libanjuta/anjuta-preferences-dialog.h,
	libanjuta/anjuta-plugin-manager.c,
	libanjuta/anjuta-shell.c,
	libanjuta/anjuta-plugin-manager.h,
	libanjuta/anjuta-shell.h,
	libanjuta/anjuta-save-prompt.c,
	libanjuta/anjuta-save-prompt.h,
	libanjuta/anjuta-children.c,
	libanjuta/anjuta-utils.c,
	libanjuta/anjuta-profile.c,
	libanjuta/anjuta-preferences.c,
	libanjuta/anjuta-launcher.c,
	libanjuta/anjuta-utils.h,
	libanjuta/anjuta-profile.h,
	libanjuta/anjuta-launcher.h,
	libanjuta/anjuta-ui.c: Updated file headers.

	* po/POTFILES.in: Updated.

	* libanjuta/anjuta-marshal.list,